cabal-version: 1.12

name:           ann
version:        0.1
description:    Please see the README on GitHub at <https://github.com/aspiwack/haskell-ann#readme>
homepage:       https://github.com/aspiwack/haskell-ann#readme
bug-reports:    https://github.com/aspiwack/haskell-ann/issues
author:         Arnaud Spiwack
maintainer:     arnaud@spiwack.net
copyright:      2022 Arnaud Spiwack
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/aspiwack/haskell-ann

library
  exposed-modules:
      Data.Ann
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
